--- a/CSS/style_clair.css
+++ b/CSS/style_clair.css
@@ -535,7 +535,7 @@ input[type=date]{
 	border-top: solid 2px rgb(93, 173, 226);
 	border-bottom: solid 2px rgb(93, 173, 226);
 	word-wrap: break-word;
-	overflow: scroll;
+	overflow-y: scroll;
 }
 
 .post-contenu2{
